# R4C

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
R4C/: settings.py  urls.py
customers/: admin.py  models.py  urls.py  views.py
media/: report-24.09.2023-01.10.2023.xlsx
orders/: admin.py  apps.py  models.py  urls.py  views.py
orders/migrations/: 0002_order_order_date.py  0003_alter_order_order_date.py  0004_alter_order_order_date.py  0005_order_status.py
orders/report_generator/: excel_generator.py
orders/services/: create_link_to_report.py  create_order.py
orders/signals/: signals.py
orders/templates/orders/: report_excel.html
robots/: admin.py  models.py  urls.py  views.py
robots/migrations/: 0002_robot_is_available.py  0003_remove_robot_is_available.py
robots/services/: add_robot.py
utils/: excel_generator.py  send_notification.py
