[tool.poetry]
name = "r4c"
version = "0.1.0"
description = ""
authors = ["Angelina_RLY <cher.rly2036@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
